[package]
name = "blaze-api"
version = "1.0.0"
edition = "2024"
authors = ["Yiğit Konur <yigit@wope.com>"]
description = "High-performance async API client with load balancing — 10K+ req/sec for LLM batch processing"
repository = "https://github.com/yigitkonur/blaze-api"
license = "MIT"
keywords = ["api", "llm", "load-balancing", "async", "batch-processing"]
categories = ["command-line-utilities", "asynchronous", "web-programming"]
readme = "README.md"
rust-version = "1.85"

[[bin]]
name = "blaze"
path = "src/main.rs"

[lib]
name = "blaze_api"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "tracing"] }
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
parking_lot = "0.12"
governor = "0.8"
nonzero_ext = "0.3"

# Progress & UI
indicatif = { version = "0.17", features = ["tokio"] }
console = "0.15"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3.15"
criterion = { version = "0.5", features = ["async_tokio"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16

[[bench]]
name = "throughput"
harness = false
